--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
-/*!
- * Bootstrap v4.5.0 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --blue: #3490dc;
